fix: z-index

--- a/projects/app/src/app/common/components/linear-spinner/linear-spinner.component.scss
+++ b/projects/app/src/app/common/components/linear-spinner/linear-spinner.component.scss
@@ -32,6 +32,7 @@
   width: 100%;
   display: block;
   overflow: hidden;
+  z-index: 5;
 
   &.-color {
     &-primary {
